--- a/book.html
+++ b/book.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
@@ -20,7 +21,6 @@
     <link rel="stylesheet" href="CSS/mediaQueries.css">
     <link rel="stylesheet" href="CSS/bookMediaQuerie.css">
 
-
     <script defer src="JS/index.js"></script>
     <script defer src="JS/book.js"></script>
     <script defer src="JS/calendar.js"></script>
@@ -33,20 +33,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;700&display=swap" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-
     <!--  Roboto  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
 
-    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
 
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 
@@ -408,7 +406,7 @@
 
                             <div class="bookingInformationRow">
                                 <span>Total: </span>
-                                <span class="price" id="dynamicPrice2">00.0 kr</span>
+                                <span class="price" id="dynamicPrice3">00.0 kr</span>
                             </div>
 
                             <div class="confirmBackButtons">
@@ -468,7 +466,7 @@
                                 </div>
 
                                 <div class="thankYouPageContentRow2">
-                                    <span class="price" id="dynamicPrice3">00.0 kr</span>
+                                    <span class="price" id="dynamicPrice4">00.0 kr</span>
                                 </div>
 
                                 <div class="thankYouPageContentRow2">
@@ -519,19 +517,19 @@
 
                                 <div class="thankYouPageContentRow2 totalPrices">
                                     <span>Betalningsvärde </span>
-                                    <span class="price" id="dynamicPrice">00.0 kr</span>
+                                    <span class="price" id="dynamicPrice5">00.0 kr</span>
                                 </div>
 
                                 <div class="thankYouPageContentRow2 totalPrices">
                                     <span>Moms (25%) </span>
-                                    <span class="price" id="dynamicPrice">00.0 kr</span>
+                                    <span class="price" id="dynamicPrice6">00.0 kr</span>
                                 </div>
 
                                 <hr class="bookHR">
 
                                 <div class="thankYouPageContentRow2 totalPrices">
                                     <span>Total </span>
-                                    <span class="price" id="dynamicPrice">00.0 kr</span>
+                                    <span class="price" id="dynamicPrice7">00.0 kr</span>
                                 </div>
 
                                 <div class="returnBtn">
