--- a/book.html
+++ b/book.html
@@ -176,7 +176,7 @@
 
                         <div class="bookingInformationRow">
                             <span>Tid: </span>
-                            <span class="time">00:00</span>
+                            <span class="time" id="pickupTime2">00:00</span>
                         </div>
 
                         <div class="bookingInformationRow">
@@ -390,7 +390,7 @@
 
                             <div class="bookingInformationRow">
                                 <span>Tid: </span>
-                                <span class="time">00:00</span>
+                                <span class="time" id="pickupTime3">00:00</span>
                             </div>
 
                             <div class="bookingInformationRow">
@@ -471,7 +471,12 @@
 
                                 <div class="thankYouPageContentRow2">
                                     <span class="date" id="selectedDate3">xx Januari 2024</span>
-                                    <span class="time">00:00</span>
+                                </div>
+
+                                <div class="thankYouPageContentRow2">
+                                    <span>Kl.</span>
+                                    <span class="time" id="pickupTime4">00:00</span>
+                                    <span>(CET)</span>
                                 </div>
 
                                 <div class="thankYouPageContentRow2">
