--- a/book.html
+++ b/book.html
@@ -511,7 +511,7 @@
                                 </div>
 
                                 <div class="thankYouPageContentRow2">
-                                    <p>E-post addres</p>
+                                    <p>E-post adress</p>
                                 </div>
 
                             </div>
