--- a/book.html
+++ b/book.html
@@ -379,7 +379,7 @@
 
                             <div class="bookingInformationRow">
                                 <span>Plats: </span>
-                                <span class="place">*****</span>
+                                <span class="place2">*****</span>
                             </div>
 
                             <div class="bookingInformationRow">
@@ -481,7 +481,7 @@
 
                                 <div class="thankYouPageContentRow2">
                                     <span>Plats: </span>
-                                    <span class="place">*****</span>
+                                    <span class="place3">*****</span>
                                 </div>
 
                             </div>
