Random Booking confirmation number

--- a/book.html
+++ b/book.html
@@ -27,6 +27,7 @@
     <script defer src="JS/regionUpdate.js"></script>
     <script defer src="JS/time.js"></script>
     <script defer src="JS/payment.js"></script>
+    <script defer src="JS/priceGenerator.js"></script>
 
     <!--  Raleway  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
