--- a/service.html
+++ b/service.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="CSS/footer.css">
 
     <link rel="stylesheet" href="CSS/service.css">
+    <link rel="stylesheet" href="CSS/serviceMediaQuerie.css">
 
     <script defer src="JS/index.js"></script>
     <script defer src="JS/service.js"></script>
@@ -232,7 +233,7 @@
                         sequi voluptatem accusamus voluptates, beatae aliquam quae dicta perferendis adipisci vitae
                         earum
                         explicabo ab aliquid ratione suscipit illo.</p>
-                        
+
                     <div class="serviceBookButton">
                         <ul>
                             <li><a href="#">Boka Nu</a></li>
