--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 
         </div>
 
-
         <div class="openNavbutton" id="openNavbutton" onclick="openNavbar()">
-            <img src="ICONS/bars-solid.svg" alt="bars-solid">
+            <span>&#9776;</span>
+            <!--<img src="ICONS/bars-solid.svg" alt="bars-solid">-->
         </div>
 
         <nav class="smallNavigation" id="smallNavigation">
@@ -98,7 +98,8 @@
             </ul>
 
             <div class="closeNavbutton" id="closeNavbutton" onclick="closeNavbar()">
-                <img src="ICONS/xmark-solid.svg" alt="xmark-solid">
+                <!-- <img src="ICONS/xmark-solid.svg" alt="xmark-solid">-->
+                <span>&#9932;</span>
             </div>
         </nav>
 
