--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
 
         </div>
 
-        <div class="openNavbutton" id="openNavbutton" onclick="openNavbar()">
+        <!--<div class="openNavbutton" id="openNavbutton" onclick="openNavbar()">
             <span>&#9776;</span>
-        </div>
+        </div>-->
+
+        <button id="openNavbutton" onclick="openNavbar()"><span>&#9776;</span></button>
 
         <nav class="smallNavigation" id="smallNavigation">
 
@@ -96,9 +98,11 @@
                 <li><a href="signUp.html">Bli medlem</a></li>
             </ul>
 
-            <div class="closeNavbutton" id="closeNavbutton" onclick="closeNavbar()">
+            <button id="closeNavbutton" onclick="closeNavbar()"><span>&#9932;</span></button>
+
+            <!--<div class="closeNavbutton" id="closeNavbutton" onclick="closeNavbar()">
                 <span>&#9932;</span>
-            </div>
+            </div>-->
         </nav>
 
     </header>
