--- a/service.html
+++ b/service.html
@@ -53,14 +53,7 @@
 
     <main>
 
-        <div class="serviceHeroImage">
-            <div class="heroImageText">
-                <h1 class="heroImageTitle">Lorem ipsum dolor sit.</h1>
-                <p class="heroImageQuote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem iusto
-                    earum accusantium.</p>
-            </div>
-        </div>
-
+        <div class="serviceHeroImage"></div>
         <div class="serviceHeroImage2"></div>
 
         <section class="serviceInfo">
