--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <!--<div class="closeNavbutton" id="closeNavbutton" onclick="closeNavbar()">
                 <span>&#9932;</span>
             </div>-->
+
         </nav>
 
     </header>
@@ -304,7 +305,7 @@
                 </div>
 
                 <div class="ourServicesCard">
-                    <img src="IMAGES/CarWindowView.png" alt="Car Window View">
+                    <img src="IMAGES/CarRainWindow.jpg" alt="Car Window View">
                     <div class="servicesContainer">
                         <h2>Timbokning</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi esse vel fugit nihil. fugiat
