--- a/logIn.html
+++ b/logIn.html
@@ -42,9 +42,7 @@
 
         <div class="logInContainer">
 
-            <div class="loginLeft">
-                <!--<img src="IMAGES/VolvoOcean.jpg" alt="">-->
-            </div>
+            <div class="loginLeft"></div>
 
             <div class="loginRight">
 
