--- a/error.html
+++ b/error.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/header.css">
     <link rel="stylesheet" href="CSS/footer.css">
-    
+
     <link rel="stylesheet" href="CSS/error.css">
     <link rel="stylesheet" href="CSS/errorMediaQuerie.css">
 
@@ -24,21 +24,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;700&display=swap" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-
     <!--  Roboto  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
 
-    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet"> -->
-
-    <!-- Font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <!--  Montserrat  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -62,7 +57,8 @@
             <h1>404</h1>
             <img src="ICONS/triangle-exclamation-solid.svg" alt="triangle-exclamation">
             <p>Whoops!!!</p>
-            <p>Den här sidan är inte klar än. Kolla gärna på våra andra tjänster <br class="pBreak"> eller ring 08 777 83 47 gällande
+            <p>Den här sidan är inte klar än. Kolla gärna på våra andra tjänster <br class="pBreak"> eller ring 08 777
+                83 47 gällande
                 kommande tjänster eller vid frågor.</p>
         </section>
     </main>
