--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                         <img src="IMAGES/MercedesEQV.jpeg" alt="Mercedes EQV">
                     </div>
                     <div class="carInfo">
-                        <h1 class="CarName">Mercedes-Benz Van EQV</h1>
+                        <h1 class="CarName">Mercedes-Benz EQV</h1>
                         <p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
                             officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>
 
