--- a/service.html
+++ b/service.html
@@ -135,7 +135,7 @@
                         <!-- Third Slideshow -->
                         <div class="slideshow-container">
                             <div class="slideshowTitle">
-                                <h3>Mercedes-Benz Van EQV</h3>
+                                <h3>Mercedes-Benz EQV</h3>
                             </div>
                             <div class="mySlides">
                                 <img src="IMAGES/MercedesEQV.jpeg">
