--- a/book.html
+++ b/book.html
@@ -235,7 +235,7 @@
                                 <div class="bookInputRow">
                                     <div class="bookInputGroup">
 
-                                        <label for="eaddress">Email Address*</label>
+                                        <label for="eaddress">E-post*</label>
                                         <input type="email" placeholder="" name="emailAddress" id="eaddress" required
                                             autocomplete="off">
                                     </div>
