--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
 
                         <div class="contactInputRow">
                             <div class="contactInputGroup">
-                                <input type="email" placeholder="Email" name="email" required autocomplete="off">
+                                <input type="email" placeholder="E-post" name="email" required autocomplete="off">
 
                             </div>
 
