--- a/logIn.html
+++ b/logIn.html
@@ -55,7 +55,7 @@
 
                     <form>
                         <div class=" loginInputRow">
-                            <input type="email" placeholder="Email Address" name="email" required autocomplete="off">
+                            <input type="email" placeholder="E-post" name="email" required autocomplete="off">
                         </div>
 
                         <div class="loginInputRow">
