--- a/signUp.html
+++ b/signUp.html
@@ -83,7 +83,7 @@
 
                         <div class="signUpInputRow">
                             <div class="signUpInputGroup">
-                                <input type="email" placeholder="Email Address*" name="emailAddress" required
+                                <input type="email" placeholder="E-post*" name="emailAddress" required
                                     autocomplete="off">
                                 <input type="number" placeholder="Telefonnummer*" name="phoneNumber" required
                                     autocomplete="off">
@@ -208,7 +208,7 @@
 
                         <div class="signUpInputRow">
                             <div class="signUpInputGroup">
-                                <input type="text" placeholder="Email Address*" name="emailAddress" required
+                                <input type="text" placeholder="E-post*" name="emailAddress" required
                                     autocomplete="off">
                                 <input type="number" placeholder="Telefonnummer*" name="phoneNumber" required
                                     autocomplete="off">
