--- a/signUp.html
+++ b/signUp.html
@@ -60,7 +60,7 @@
                         <div class="signUpInputRow">
                             <div class="selectWheelTitle">
                                 <select required>
-                                    <option value="" disabled selected>Title*</option>
+                                    <option value="" disabled selected>Titel*</option>
                                     <option value="option1">Mr.</option>
                                     <option value="option2">Ms.</option>
                                 </select>
@@ -68,6 +68,7 @@
                         </div>
 
                         <div class="signUpInputRow">
+                            <label>Personuppgifter</label>
                             <div class="signUpInputGroup">
                                 <input type="text" placeholder="Förnamn*" name="firstname" required autocomplete="off">
                                 <input type="text" placeholder="Efternamn*" name="Surname" required autocomplete="off">
@@ -90,7 +91,7 @@
                             </div>
                         </div>
 
-                        <div class="signUpInputRow">
+                        <!--<div class="signUpInputRow">
                             <div class="selectWheelRegion">
                                 <select required>
                                     <option value="" disabled selected>Region*</option>
@@ -108,11 +109,11 @@
                                     <option value="option12">Östergötlands Län</option>
                                 </select>
                             </div>
-                        </div>
+                        </div>-->
 
-                        <div class="signUpInputRow">
+                        <div class="signUpInputRow signUpExtraPadding">
+                            <label>Faktureringsadress</label>
                             <div class="signUpInputGroup">
-
                                 <input type="text" placeholder="Adress*" name="address" required autocomplete="off">
                             </div>
                         </div>
@@ -164,7 +165,7 @@
                             </div>
                         </div>
 
-                        <div class="signUpInputRow">
+                        <!--<div class="signUpInputRow">
                             <div class="selectWheelRegion">
                                 <select required>
                                     <option value="" disabled selected>Region*</option>
@@ -182,7 +183,7 @@
                                     <option value="option12">Östergötlands Län</option>
                                 </select>
                             </div>
-                        </div>
+                        </div>-->
 
                         <div class="signUpInputRow">
                             <div class="signUpInputGroup">
@@ -198,7 +199,7 @@
                             </div>
                         </div>
 
-                        <div class="signUpInputRow">
+                        <div class="signUpInputRow signUpExtraPadding">
                             <label>Kontaktperson</label>
                             <div class="signUpInputGroup">
                                 <input type="text" placeholder="Förnamn*" name="firstname" required autocomplete="off">
