--- a/logIn.html
+++ b/logIn.html
@@ -17,12 +17,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;700&display=swap" rel="stylesheet">
-    
+
     <!--  Roboto  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
-    
+
     <!--  Montserrat  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,11 @@
             <div class="loginRight">
 
                 <div class="logoAndText">
-                    <h1>Limovia</h1>
+                    <ul>
+                        <li><a href="index.html">
+                                <h1>Limovia</h1>
+                            </a></li>
+                    </ul>
                     <span>| Logga In</span>
                 </div>
 
