--- a/signUp.html
+++ b/signUp.html
@@ -44,7 +44,11 @@
             <div class="signUpPrivateContainer">
 
                 <div class="signUpAndText">
-                    <h1>Limovia</h1>
+                    <ul>
+                        <li><a href="index.html">
+                                <h1>Limovia</h1>
+                            </a></li>
+                    </ul>
                     <span>| Privat</span>
                 </div>
 
@@ -143,7 +147,11 @@
             <div class="signUpCompanyContainer">
 
                 <div class="signUpAndText">
-                    <h1>Limovia</h1>
+                    <ul>
+                        <li><a href="index.html">
+                                <h1>Limovia</h1>
+                            </a></li>
+                    </ul>
                     <span>| För Företag</span>
                 </div>
 
