--- a/index.html
+++ b/index.html
@@ -85,12 +85,19 @@
 
             <ul>
                 <li><a href="#aboutLimovia">Om Limovia</a></li>
+                <hr class="smallNavHR">
                 <li><a href="#ourServices">Våra Tjänster</a></li>
+                <hr class="smallNavHR">
                 <li><a href="#FAQ">FAQ</a></li>
+                <hr class="smallNavHR">
                 <li><a href="#fleet">Flotta</a></li>
+                <hr class="smallNavHR">
                 <li><a href="#contact">Kontakt</a></li>
+                <hr class="smallNavHR">
                 <li><a href="logIn.html">Logga In</a></li>
+                <hr class="smallNavHR">
                 <li><a href="signUp.html">Bli medlem</a></li>
+                <hr class="smallNavHR">
             </ul>
 
             <button id="closeNavbutton" onclick="closeNavbar()"><span>&#9932;</span></button>
@@ -855,7 +862,7 @@
                                 <input type="text" placeholder="Efternamn" name="efternamn" required autocomplete="off">
                             </div>
                         </div>
- 
+
                         <div class="contactInputRow">
                             <div class="contactInputGroup">
                                 <input type="email" placeholder="E-post" name="email" required autocomplete="off">
