--- a/index.html
+++ b/index.html
@@ -469,36 +469,35 @@
 
                 <div class="fleetSlide carousel-slide">
                     <div class="fleetSlideImage">
-                        <img src="IMAGES/MercedesEQS.jpg" alt="Mercedes EQS">
+                        <img src="IMAGES/MercedesMaybach.jpg" alt="Mercedes EQS">
                     </div>
                     <div class="carInfo">
-                        <h1 class="CarName">Mercedes-Benz EQS</h1>
+                        <h1 class="CarName">Mercedes-Maybach S-Klass</h1>
                         <p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
                             officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>
-
                         <div class="carSpecs">
 
                             <div class="carSpecsIcons">
                                 <div class="specIcon">
                                     <span class="specIconFrame"><img src="ICONS/car-solid.svg" alt="car"></span>
-                                    <p>Halvkombi</p>
+                                    <p>Sedan</p>
                                 </div>
 
                                 <div class="specIcon">
                                     <span class="specIconFrame"><img src="ICONS/user-solid.svg" alt="user"></span>
-                                    <p>5</p>
+                                    <p>4</p>
                                 </div>
 
                                 <div class="specIcon">
                                     <span class="specIconFrame"><img src="ICONS/suitcase-solid.svg"
                                             alt="suitcase"></span>
-                                    <p>5</p>
+                                    <p>4</p>
                                 </div>
 
                                 <div class="specIcon">
                                     <span class="specIconFrame"><img src="ICONS/gas-pump-solid.svg"
                                             alt="gas pump"></span>
-                                    <p>Elektrisk</p>
+                                    <p>Hybrid</p>
                                 </div>
 
                                 <div class="specIcon">
@@ -746,7 +745,7 @@
                                 <div class="specIcon">
                                     <span class="specIconFrame"><img src="ICONS/gas-pump-solid.svg"
                                             alt="gas pump"></span>
-                                    <p>Bensin</p>
+                                    <p>Elektrisk</p>
                                 </div>
 
                                 <div class="specIcon">
