--- a/service.html
+++ b/service.html
@@ -113,19 +113,19 @@
                         <!-- Second Slideshow -->
                         <div class="slideshow-container">
                             <div class="slideshowTitle">
-                                <h3>Mercedes-Benz EQS</h3>
+                                <h3>Mercedes-Maybach S-Klass</h3>
                             </div>
                             <div class="mySlides">
-                                <img src="IMAGES/MercedesEQS.jpg">
+                                <img src="IMAGES/MercedesMaybach.jpg">
                             </div>
                             <div class="mySlides">
-                                <img src="INTERIORIMG/MercedesEQSInterior.png">
+                                <img src="INTERIORIMG/MercedesMaybachInterior.jpg">
                             </div>
                             <div class="mySlides">
-                                <img src="INTERIORIMG/MercedesEQSInterior2.jpg">
+                                <img src="INTERIORIMG/MercedesMaybachInterior2.png">
                             </div>
                             <div class="mySlides">
-                                <img src="INTERIORIMG/MercedesEQSInterior3.png">
+                                <img src="INTERIORIMG/MercedesMaybachInterior3.jpg">
                             </div>
                             <div style="text-align:center">
                                 <span class="dot" onclick="currentSlide(1, 1)"></span>
