--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Limovia grundat 2026, är ett lokalt företag som erbjuder privata chaufförer dygnet runt.">
+        content="Limovia, grundat 2026, är ett lokalt företag som tillhandahåller privata transporttjänster dygnet runt.">
 
     <title>Limovia | Officiella Hemsida</title>
     <link rel="shortcut icon" href="LOGOS/LimoviaFavicon.png" type="image/x-icon">
