--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         <section class="questionContainer">
 
             <div class="questionSearchBar">
-                <form class="searchBar" action="https://youtu.be/0-7IHOXkiV8?si=Ipa8abByRP5gL_aY&t=116">
+                <form class="searchBar" action="https://youtu.be/c56t7upa8Bk?si=pHgcy-c6VMGcOAeE">
                     <input type="text" placeholder="sök här" name="search" required autocomplete="off">
                     <button type="submit"><i class="fa fa-search"></i></i></button>
                 </form>
@@ -434,8 +434,11 @@
                     </div>
                     <div class="carInfo">
                         <h1 class="CarName">Volvo XC90</h1>
-                        <p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>
+                        <!--<p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>-->
+                        <p class="carInfoParagraph">Volvo XC90 erbjuder lyx, säkerhet, avancerad teknik, rymlig
+                            interiör, bekväma säten och effektiva motorer, inklusive
+                            plug-in hybrid. Perfekt för familjer och resor.</p>
 
                         <div class="carSpecs">
 
@@ -447,7 +450,7 @@
 
                                 <div class="specIcon">
                                     <span class="specIconFrame"><img src="ICONS/user-solid.svg" alt="user"></span>
-                                    <p>4</p>
+                                    <p>7</p>
                                 </div>
 
                                 <div class="specIcon">
@@ -459,7 +462,7 @@
                                 <div class="specIcon">
                                     <span class="specIconFrame"><img src="ICONS/gas-pump-solid.svg"
                                             alt="gas pump"></span>
-                                    <p>Hybrid</p>
+                                    <p>Laddhybrid</p>
                                 </div>
 
                                 <div class="specIcon">
@@ -495,8 +498,11 @@
                     </div>
                     <div class="carInfo">
                         <h1 class="CarName">Volvo S90</h1>
-                        <p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>
+                        <!--<p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>-->
+                        <p class="carInfoParagraph">Volvo S90 har elegant skandinavisk design, lyxig interiör, avancerad
+                            säkerhet, rymlig kupé, bekväma säten, kraftfulla
+                            hybriddrivlinor</p>
                         <div class="carSpecs">
 
                             <div class="carSpecsIcons">
@@ -513,13 +519,13 @@
                                 <div class="specIcon">
                                     <span class="specIconFrame"><img src="ICONS/suitcase-solid.svg"
                                             alt="suitcase"></span>
-                                    <p>4</p>
+                                    <p>3</p>
                                 </div>
 
                                 <div class="specIcon">
                                     <span class="specIconFrame"><img src="ICONS/gas-pump-solid.svg"
                                             alt="gas pump"></span>
-                                    <p>Hybrid</p>
+                                    <p>Laddhybrid</p>
                                 </div>
 
                                 <div class="specIcon">
@@ -556,8 +562,11 @@
                     </div>
                     <div class="carInfo">
                         <h1 class="CarName">Volvo EX90</h1>
-                        <p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>
+                        <!--<p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>-->
+                        <p class="carInfoParagraph">Volvo EX90 är en toppmodern el-SUV med sju säten, banbrytande
+                            lidar-säkerhet, hållbara material, lång räckvidd och
+                            intelligent energihantering.</p>
 
                         <div class="carSpecs">
 
@@ -618,8 +627,11 @@
                     </div>
                     <div class="carInfo">
                         <h1 class="CarName">Volvo EM90</h1>
-                        <p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>
+                        <!--<p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>-->
+                        <p class="carInfoParagraph">Volvo EM90 är en premium el-MPV med lounge-liknande interiör,
+                            förstklassig komfort, avancerad säkerhet, panoramatak,
+                            smart röststyrning och lång räckvidd.</p>
 
                         <div class="carSpecs">
 
@@ -674,7 +686,7 @@
 
                 </div>
 
-                <div class="fleetSlide carousel-slide">
+                <!--<div class="fleetSlide carousel-slide">
                     <div class="fleetSlideImage">
                         <img src="IMAGES/RollsRoys.jpg" alt="Rolls Roys">
                     </div>
@@ -734,7 +746,7 @@
 
                     </div>
 
-                </div>
+                </div>-->
             </div>
 
             <div class="carFleetNavBtn">
