--- a/service.html
+++ b/service.html
@@ -67,7 +67,8 @@
                 <div class="serviceInfoContent">
 
                     <h1 class="serviceName" id="serviceName">Tjänstens namn</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque excepturi, quaerat eum minus
+                    <p class="serviceIntro" id="serviceIntro">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Doloremque excepturi, quaerat eum minus
                         libero ullam maiores! Velit perferendis veniam id at a iusto.</p>
                 </div>
 
@@ -76,7 +77,8 @@
                 <div class="serviceInfoContent">
 
                     <h1>Beskrivning av tjänsten</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ab obcaecati necessitatibus
+                    <p class="serviceExplanation" id="serviceExplanation">Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Nihil ab obcaecati necessitatibus
                         ratione
                         adipisci vitae quas est voluptatibus optio. Nam rem quibusdam laboriosam nihil quae dolorem
                         neque
@@ -192,7 +194,8 @@
 
                 <div class="serviceInfoContent">
                     <h1>Avbokningspolicy</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iure error sapiente incidunt,
+                    <p class="serviceCancellation" id="serviceCancellation">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iure
+                        error sapiente incidunt,
                         sed
                         sequi voluptatem accusamus voluptates, beatae aliquam quae dicta perferendis adipisci vitae
                         earum
